// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timeline /> should open MetadataCues 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: row-resize;
  height: 4px;
  margin-top: -2px;
  margin-bottom: -2px;
  z-index: 10;
}

.emotion-6 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 4px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  background-color: #2e2e2e;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  width: 2px;
  height: 24px;
  background-color: #191919;
  margin-left: 4px;
  margin-right: 8px;
}

.emotion-3 {
  width: 8px;
}

.emotion-9 {
  height: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 300px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0%;
  position: relative;
  margin-left: 200px;
  border-left: 1px solid #3b3b3b;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 4px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  color: #73b61c;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  color: #ffffff;
}

.emotion-4:hover svg,
.emotion-4.focus-visible:focus svg {
  opacity: 1;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  background-color: #2e2e2e;
  color: #73b61c;
}

.emotion-4:hover svg path,
.emotion-4.focus-visible:focus svg path {
  fill: #73b61c;
}

<div
  style={
    Object {
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "nowrap",
    }
  }
>
  <div
    aria-label="Resize vertically"
    className="emotion-0"
    onMouseDown={[Function]}
  />
  <div
    className="emotion-6"
  >
    <button
      aria-label="Open Timeline"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Timeline
    </button>
    <TimelineControls
      length={18}
      videoRef={
        Object {
          "current": Object {
            "addEventListener": [Function],
            "currentTime": 0,
            "duration": 18,
            "pause": [Function],
            "paused": true,
            "play": [Function],
            "removeEventListener": [Function],
          },
        }
      }
    />
    <div
      className="emotion-5"
    >
      <TimelineCaptions
        initialTrackIndex={-1}
        videoRef={
          Object {
            "current": Object {
              "addEventListener": [Function],
              "currentTime": 0,
              "duration": 18,
              "pause": [Function],
              "paused": true,
              "play": [Function],
              "removeEventListener": [Function],
            },
          }
        }
      />
      <div
        className="emotion-2"
      />
      <button
        aria-label="Close Metadata"
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <svg
          color="#73b61c"
          data-file-name="timebasedMetadata.svg"
          height={20}
        />
        <div
          className="emotion-3"
        />
        Metadata
      </button>
    </div>
  </div>
  <div
    className="emotion-9"
  >
    <div
      className="emotion-8"
    >
      <div
        className="emotion-7"
      >
        <TimelinePlayhead
          videoRef={
            Object {
              "current": Object {
                "addEventListener": [Function],
                "currentTime": 0,
                "duration": 18,
                "pause": [Function],
                "paused": true,
                "play": [Function],
                "removeEventListener": [Function],
              },
            }
          }
        />
        <TimelineRuler />
        <TimelineAggregate
          detections={
            Array [
              Object {
                "name": "gcp-video-explicit-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Gh st",
                  },
                  Object {
                    "count": 3,
                    "label": "Busters",
                  },
                ],
              },
              Object {
                "name": "gcp-video-label-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Label 1",
                  },
                  Object {
                    "count": 6,
                    "label": "Label 2",
                  },
                  Object {
                    "count": 9,
                    "label": "Label 3 Plus More Text to Make A Long Label String",
                  },
                ],
              },
              Object {
                "name": "gcp-video-logo-detection",
                "predictions": Array [
                  Object {
                    "count": 1,
                    "label": "Logo 1",
                  },
                  Object {
                    "count": 3,
                    "label": "Logo 2",
                  },
                  Object {
                    "count": 5,
                    "label": "Logo 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-object-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Object 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 2",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-text-detection",
                "predictions": Array [
                  Object {
                    "count": 2,
                    "label": "Text 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Text 2",
                  },
                  Object {
                    "count": 6,
                    "label": "Text 3",
                  },
                  Object {
                    "count": 8,
                    "label": "Text 4",
                  },
                ],
              },
            ]
          }
          dispatch={[Function]}
          settings={Object {}}
          timelineHeight={300}
        />
        <TimelineDetections
          detections={
            Array [
              Object {
                "name": "gcp-video-explicit-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Gh st",
                  },
                  Object {
                    "count": 3,
                    "label": "Busters",
                  },
                ],
              },
              Object {
                "name": "gcp-video-label-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Label 1",
                  },
                  Object {
                    "count": 6,
                    "label": "Label 2",
                  },
                  Object {
                    "count": 9,
                    "label": "Label 3 Plus More Text to Make A Long Label String",
                  },
                ],
              },
              Object {
                "name": "gcp-video-logo-detection",
                "predictions": Array [
                  Object {
                    "count": 1,
                    "label": "Logo 1",
                  },
                  Object {
                    "count": 3,
                    "label": "Logo 2",
                  },
                  Object {
                    "count": 5,
                    "label": "Logo 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-object-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Object 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 2",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-text-detection",
                "predictions": Array [
                  Object {
                    "count": 2,
                    "label": "Text 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Text 2",
                  },
                  Object {
                    "count": 6,
                    "label": "Text 3",
                  },
                  Object {
                    "count": 8,
                    "label": "Text 4",
                  },
                ],
              },
            ]
          }
          dispatch={[Function]}
          settings={Object {}}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Timeline /> should open MetadataCues 2`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: row-resize;
  height: 4px;
  margin-top: -2px;
  margin-bottom: -2px;
  z-index: 10;
}

.emotion-6 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 4px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  background-color: #2e2e2e;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  width: 2px;
  height: 24px;
  background-color: #191919;
  margin-left: 4px;
  margin-right: 8px;
}

.emotion-3 {
  width: 8px;
}

.emotion-9 {
  height: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 300px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0%;
  position: relative;
  margin-left: 200px;
  border-left: 1px solid #3b3b3b;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 4px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  color: #73b61c;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  color: #ffffff;
}

.emotion-4:hover svg,
.emotion-4.focus-visible:focus svg {
  opacity: 1;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  background-color: #2e2e2e;
  color: #73b61c;
}

.emotion-4:hover svg path,
.emotion-4.focus-visible:focus svg path {
  fill: #73b61c;
}

<div
  style={
    Object {
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "nowrap",
    }
  }
>
  <div
    aria-label="Resize vertically"
    className="emotion-0"
    onMouseDown={[Function]}
  />
  <div
    className="emotion-6"
  >
    <button
      aria-label="Open Timeline"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Timeline
    </button>
    <TimelineControls
      length={18}
      videoRef={
        Object {
          "current": Object {
            "addEventListener": [Function],
            "currentTime": 0,
            "duration": 18,
            "pause": [Function],
            "paused": true,
            "play": [Function],
            "removeEventListener": [Function],
          },
        }
      }
    />
    <div
      className="emotion-5"
    >
      <TimelineCaptions
        initialTrackIndex={-1}
        videoRef={
          Object {
            "current": Object {
              "addEventListener": [Function],
              "currentTime": 0,
              "duration": 18,
              "pause": [Function],
              "paused": true,
              "play": [Function],
              "removeEventListener": [Function],
            },
          }
        }
      />
      <div
        className="emotion-2"
      />
      <button
        aria-label="Close Metadata"
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <svg
          color="#73b61c"
          data-file-name="timebasedMetadata.svg"
          height={20}
        />
        <div
          className="emotion-3"
        />
        Metadata
      </button>
    </div>
  </div>
  <div
    className="emotion-9"
  >
    <div
      className="emotion-8"
    >
      <div
        className="emotion-7"
      >
        <TimelinePlayhead
          videoRef={
            Object {
              "current": Object {
                "addEventListener": [Function],
                "currentTime": 0,
                "duration": 18,
                "pause": [Function],
                "paused": true,
                "play": [Function],
                "removeEventListener": [Function],
              },
            }
          }
        />
        <TimelineRuler />
        <TimelineAggregate
          detections={
            Array [
              Object {
                "name": "gcp-video-explicit-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Gh st",
                  },
                  Object {
                    "count": 3,
                    "label": "Busters",
                  },
                ],
              },
              Object {
                "name": "gcp-video-label-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Label 1",
                  },
                  Object {
                    "count": 6,
                    "label": "Label 2",
                  },
                  Object {
                    "count": 9,
                    "label": "Label 3 Plus More Text to Make A Long Label String",
                  },
                ],
              },
              Object {
                "name": "gcp-video-logo-detection",
                "predictions": Array [
                  Object {
                    "count": 1,
                    "label": "Logo 1",
                  },
                  Object {
                    "count": 3,
                    "label": "Logo 2",
                  },
                  Object {
                    "count": 5,
                    "label": "Logo 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-object-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Object 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 2",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-text-detection",
                "predictions": Array [
                  Object {
                    "count": 2,
                    "label": "Text 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Text 2",
                  },
                  Object {
                    "count": 6,
                    "label": "Text 3",
                  },
                  Object {
                    "count": 8,
                    "label": "Text 4",
                  },
                ],
              },
            ]
          }
          dispatch={[Function]}
          settings={Object {}}
          timelineHeight={300}
        />
        <TimelineDetections
          detections={
            Array [
              Object {
                "name": "gcp-video-explicit-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Gh st",
                  },
                  Object {
                    "count": 3,
                    "label": "Busters",
                  },
                ],
              },
              Object {
                "name": "gcp-video-label-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Label 1",
                  },
                  Object {
                    "count": 6,
                    "label": "Label 2",
                  },
                  Object {
                    "count": 9,
                    "label": "Label 3 Plus More Text to Make A Long Label String",
                  },
                ],
              },
              Object {
                "name": "gcp-video-logo-detection",
                "predictions": Array [
                  Object {
                    "count": 1,
                    "label": "Logo 1",
                  },
                  Object {
                    "count": 3,
                    "label": "Logo 2",
                  },
                  Object {
                    "count": 5,
                    "label": "Logo 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-object-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Object 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 2",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-text-detection",
                "predictions": Array [
                  Object {
                    "count": 2,
                    "label": "Text 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Text 2",
                  },
                  Object {
                    "count": 6,
                    "label": "Text 3",
                  },
                  Object {
                    "count": 8,
                    "label": "Text 4",
                  },
                ],
              },
            ]
          }
          dispatch={[Function]}
          settings={Object {}}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Timeline /> should open the Timeline panel 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: row-resize;
  height: 4px;
  margin-top: -2px;
  margin-bottom: -2px;
  z-index: 10;
}

.emotion-6 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 4px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  background-color: #2e2e2e;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  width: 2px;
  height: 24px;
  background-color: #191919;
  margin-left: 4px;
  margin-right: 8px;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 4px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  color: #808080;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  color: #ffffff;
}

.emotion-4:hover svg,
.emotion-4.focus-visible:focus svg {
  opacity: 1;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  background-color: #2e2e2e;
  color: #ffffff;
}

.emotion-4:hover svg path,
.emotion-4.focus-visible:focus svg path {
  fill: #ffffff;
}

.emotion-3 {
  width: 8px;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 300px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0%;
  position: relative;
  margin-left: 200px;
  border-left: 1px solid #3b3b3b;
}

.emotion-9 {
  height: 300px;
}

<div
  style={
    Object {
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "nowrap",
    }
  }
>
  <div
    aria-label="Resize vertically"
    className="emotion-0"
    onMouseDown={[Function]}
  />
  <div
    className="emotion-6"
  >
    <button
      aria-label="Close Timeline"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Timeline
    </button>
    <TimelineControls
      length={18}
      videoRef={
        Object {
          "current": Object {
            "addEventListener": [Function],
            "currentTime": 0,
            "duration": 18,
            "pause": [Function],
            "paused": true,
            "play": [Function],
            "removeEventListener": [Function],
          },
        }
      }
    />
    <div
      className="emotion-5"
    >
      <TimelineCaptions
        initialTrackIndex={-1}
        videoRef={
          Object {
            "current": Object {
              "addEventListener": [Function],
              "currentTime": 0,
              "duration": 18,
              "pause": [Function],
              "paused": true,
              "play": [Function],
              "removeEventListener": [Function],
            },
          }
        }
      />
      <div
        className="emotion-2"
      />
      <button
        aria-label="Open Metadata"
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <svg
          color="#808080"
          data-file-name="timebasedMetadata.svg"
          height={20}
        />
        <div
          className="emotion-3"
        />
        Metadata
      </button>
    </div>
  </div>
  <div
    className="emotion-9"
  >
    <div
      className="emotion-8"
    >
      <div
        className="emotion-7"
      >
        <TimelinePlayhead
          videoRef={
            Object {
              "current": Object {
                "addEventListener": [Function],
                "currentTime": 0,
                "duration": 18,
                "pause": [Function],
                "paused": true,
                "play": [Function],
                "removeEventListener": [Function],
              },
            }
          }
        />
        <TimelineRuler />
        <TimelineAggregate
          detections={
            Array [
              Object {
                "name": "gcp-video-explicit-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Gh st",
                  },
                  Object {
                    "count": 3,
                    "label": "Busters",
                  },
                ],
              },
              Object {
                "name": "gcp-video-label-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Label 1",
                  },
                  Object {
                    "count": 6,
                    "label": "Label 2",
                  },
                  Object {
                    "count": 9,
                    "label": "Label 3 Plus More Text to Make A Long Label String",
                  },
                ],
              },
              Object {
                "name": "gcp-video-logo-detection",
                "predictions": Array [
                  Object {
                    "count": 1,
                    "label": "Logo 1",
                  },
                  Object {
                    "count": 3,
                    "label": "Logo 2",
                  },
                  Object {
                    "count": 5,
                    "label": "Logo 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-object-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Object 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 2",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-text-detection",
                "predictions": Array [
                  Object {
                    "count": 2,
                    "label": "Text 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Text 2",
                  },
                  Object {
                    "count": 6,
                    "label": "Text 3",
                  },
                  Object {
                    "count": 8,
                    "label": "Text 4",
                  },
                ],
              },
            ]
          }
          dispatch={[Function]}
          settings={Object {}}
          timelineHeight={300}
        />
        <TimelineDetections
          detections={
            Array [
              Object {
                "name": "gcp-video-explicit-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Gh st",
                  },
                  Object {
                    "count": 3,
                    "label": "Busters",
                  },
                ],
              },
              Object {
                "name": "gcp-video-label-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Label 1",
                  },
                  Object {
                    "count": 6,
                    "label": "Label 2",
                  },
                  Object {
                    "count": 9,
                    "label": "Label 3 Plus More Text to Make A Long Label String",
                  },
                ],
              },
              Object {
                "name": "gcp-video-logo-detection",
                "predictions": Array [
                  Object {
                    "count": 1,
                    "label": "Logo 1",
                  },
                  Object {
                    "count": 3,
                    "label": "Logo 2",
                  },
                  Object {
                    "count": 5,
                    "label": "Logo 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-object-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Object 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 2",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-text-detection",
                "predictions": Array [
                  Object {
                    "count": 2,
                    "label": "Text 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Text 2",
                  },
                  Object {
                    "count": 6,
                    "label": "Text 3",
                  },
                  Object {
                    "count": 8,
                    "label": "Text 4",
                  },
                ],
              },
            ]
          }
          dispatch={[Function]}
          settings={Object {}}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Timeline /> should open the Timeline panel 2`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: row-resize;
  height: 4px;
  margin-top: -2px;
  margin-bottom: -2px;
  z-index: 10;
}

.emotion-6 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 4px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  background-color: #2e2e2e;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  width: 2px;
  height: 24px;
  background-color: #191919;
  margin-left: 4px;
  margin-right: 8px;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 4px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  color: #808080;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  color: #ffffff;
}

.emotion-4:hover svg,
.emotion-4.focus-visible:focus svg {
  opacity: 1;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  background-color: #2e2e2e;
  color: #ffffff;
}

.emotion-4:hover svg path,
.emotion-4.focus-visible:focus svg path {
  fill: #ffffff;
}

.emotion-3 {
  width: 8px;
}

.emotion-9 {
  height: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 300px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0%;
  position: relative;
  margin-left: 200px;
  border-left: 1px solid #3b3b3b;
}

<div
  style={
    Object {
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "nowrap",
    }
  }
>
  <div
    aria-label="Resize vertically"
    className="emotion-0"
    onMouseDown={[Function]}
  />
  <div
    className="emotion-6"
  >
    <button
      aria-label="Open Timeline"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Timeline
    </button>
    <TimelineControls
      length={18}
      videoRef={
        Object {
          "current": Object {
            "addEventListener": [Function],
            "currentTime": 0,
            "duration": 18,
            "pause": [Function],
            "paused": true,
            "play": [Function],
            "removeEventListener": [Function],
          },
        }
      }
    />
    <div
      className="emotion-5"
    >
      <TimelineCaptions
        initialTrackIndex={-1}
        videoRef={
          Object {
            "current": Object {
              "addEventListener": [Function],
              "currentTime": 0,
              "duration": 18,
              "pause": [Function],
              "paused": true,
              "play": [Function],
              "removeEventListener": [Function],
            },
          }
        }
      />
      <div
        className="emotion-2"
      />
      <button
        aria-label="Open Metadata"
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <svg
          color="#808080"
          data-file-name="timebasedMetadata.svg"
          height={20}
        />
        <div
          className="emotion-3"
        />
        Metadata
      </button>
    </div>
  </div>
  <div
    className="emotion-9"
  >
    <div
      className="emotion-8"
    >
      <div
        className="emotion-7"
      >
        <TimelinePlayhead
          videoRef={
            Object {
              "current": Object {
                "addEventListener": [Function],
                "currentTime": 0,
                "duration": 18,
                "pause": [Function],
                "paused": true,
                "play": [Function],
                "removeEventListener": [Function],
              },
            }
          }
        />
        <TimelineRuler />
        <TimelineAggregate
          detections={
            Array [
              Object {
                "name": "gcp-video-explicit-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Gh st",
                  },
                  Object {
                    "count": 3,
                    "label": "Busters",
                  },
                ],
              },
              Object {
                "name": "gcp-video-label-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Label 1",
                  },
                  Object {
                    "count": 6,
                    "label": "Label 2",
                  },
                  Object {
                    "count": 9,
                    "label": "Label 3 Plus More Text to Make A Long Label String",
                  },
                ],
              },
              Object {
                "name": "gcp-video-logo-detection",
                "predictions": Array [
                  Object {
                    "count": 1,
                    "label": "Logo 1",
                  },
                  Object {
                    "count": 3,
                    "label": "Logo 2",
                  },
                  Object {
                    "count": 5,
                    "label": "Logo 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-object-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Object 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 2",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-text-detection",
                "predictions": Array [
                  Object {
                    "count": 2,
                    "label": "Text 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Text 2",
                  },
                  Object {
                    "count": 6,
                    "label": "Text 3",
                  },
                  Object {
                    "count": 8,
                    "label": "Text 4",
                  },
                ],
              },
            ]
          }
          dispatch={[Function]}
          settings={Object {}}
          timelineHeight={300}
        />
        <TimelineDetections
          detections={
            Array [
              Object {
                "name": "gcp-video-explicit-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Gh st",
                  },
                  Object {
                    "count": 3,
                    "label": "Busters",
                  },
                ],
              },
              Object {
                "name": "gcp-video-label-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Label 1",
                  },
                  Object {
                    "count": 6,
                    "label": "Label 2",
                  },
                  Object {
                    "count": 9,
                    "label": "Label 3 Plus More Text to Make A Long Label String",
                  },
                ],
              },
              Object {
                "name": "gcp-video-logo-detection",
                "predictions": Array [
                  Object {
                    "count": 1,
                    "label": "Logo 1",
                  },
                  Object {
                    "count": 3,
                    "label": "Logo 2",
                  },
                  Object {
                    "count": 5,
                    "label": "Logo 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-object-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Object 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 2",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-text-detection",
                "predictions": Array [
                  Object {
                    "count": 2,
                    "label": "Text 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Text 2",
                  },
                  Object {
                    "count": 6,
                    "label": "Text 3",
                  },
                  Object {
                    "count": 8,
                    "label": "Text 4",
                  },
                ],
              },
            ]
          }
          dispatch={[Function]}
          settings={Object {}}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Timeline /> should render properly 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: row-resize;
  height: 4px;
  margin-top: -2px;
  margin-bottom: -2px;
  z-index: 10;
}

.emotion-6 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  padding: 4px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  color: #ffffff;
}

.emotion-1:hover svg,
.emotion-1.focus-visible:focus svg {
  opacity: 1;
}

.emotion-1[aria-disabled=true] {
  color: #808080;
}

.emotion-1:hover,
.emotion-1.focus-visible:focus {
  background-color: #2e2e2e;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  width: 2px;
  height: 24px;
  background-color: #191919;
  margin-left: 4px;
  margin-right: 8px;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 4px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  color: #808080;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  color: #ffffff;
}

.emotion-4:hover svg,
.emotion-4.focus-visible:focus svg {
  opacity: 1;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

.emotion-4:hover,
.emotion-4.focus-visible:focus {
  background-color: #2e2e2e;
  color: #ffffff;
}

.emotion-4:hover svg path,
.emotion-4.focus-visible:focus svg path {
  fill: #ffffff;
}

.emotion-3 {
  width: 8px;
}

.emotion-9 {
  height: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 300px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0%;
  position: relative;
  margin-left: 200px;
  border-left: 1px solid #3b3b3b;
}

<div
  style={
    Object {
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "nowrap",
    }
  }
>
  <div
    aria-label="Resize vertically"
    className="emotion-0"
    onMouseDown={[Function]}
  />
  <div
    className="emotion-6"
  >
    <button
      aria-label="Open Timeline"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Timeline
    </button>
    <TimelineControls
      length={18}
      videoRef={
        Object {
          "current": undefined,
        }
      }
    />
    <div
      className="emotion-5"
    >
      <TimelineCaptions
        initialTrackIndex={-1}
        videoRef={
          Object {
            "current": undefined,
          }
        }
      />
      <div
        className="emotion-2"
      />
      <button
        aria-label="Open Metadata"
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <svg
          color="#808080"
          data-file-name="timebasedMetadata.svg"
          height={20}
        />
        <div
          className="emotion-3"
        />
        Metadata
      </button>
    </div>
  </div>
  <div
    className="emotion-9"
  >
    <div
      className="emotion-8"
    >
      <div
        className="emotion-7"
      >
        <TimelinePlayhead
          videoRef={
            Object {
              "current": undefined,
            }
          }
        />
        <TimelineRuler />
        <TimelineAggregate
          detections={
            Array [
              Object {
                "name": "gcp-video-explicit-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Gh st",
                  },
                  Object {
                    "count": 3,
                    "label": "Busters",
                  },
                ],
              },
              Object {
                "name": "gcp-video-label-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Label 1",
                  },
                  Object {
                    "count": 6,
                    "label": "Label 2",
                  },
                  Object {
                    "count": 9,
                    "label": "Label 3 Plus More Text to Make A Long Label String",
                  },
                ],
              },
              Object {
                "name": "gcp-video-logo-detection",
                "predictions": Array [
                  Object {
                    "count": 1,
                    "label": "Logo 1",
                  },
                  Object {
                    "count": 3,
                    "label": "Logo 2",
                  },
                  Object {
                    "count": 5,
                    "label": "Logo 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-object-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Object 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 2",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-text-detection",
                "predictions": Array [
                  Object {
                    "count": 2,
                    "label": "Text 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Text 2",
                  },
                  Object {
                    "count": 6,
                    "label": "Text 3",
                  },
                  Object {
                    "count": 8,
                    "label": "Text 4",
                  },
                ],
              },
            ]
          }
          dispatch={[Function]}
          settings={Object {}}
          timelineHeight={300}
        />
        <TimelineDetections
          detections={
            Array [
              Object {
                "name": "gcp-video-explicit-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Gh st",
                  },
                  Object {
                    "count": 3,
                    "label": "Busters",
                  },
                ],
              },
              Object {
                "name": "gcp-video-label-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Label 1",
                  },
                  Object {
                    "count": 6,
                    "label": "Label 2",
                  },
                  Object {
                    "count": 9,
                    "label": "Label 3 Plus More Text to Make A Long Label String",
                  },
                ],
              },
              Object {
                "name": "gcp-video-logo-detection",
                "predictions": Array [
                  Object {
                    "count": 1,
                    "label": "Logo 1",
                  },
                  Object {
                    "count": 3,
                    "label": "Logo 2",
                  },
                  Object {
                    "count": 5,
                    "label": "Logo 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-object-detection",
                "predictions": Array [
                  Object {
                    "count": 3,
                    "label": "Object 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 2",
                  },
                  Object {
                    "count": 4,
                    "label": "Object 3",
                  },
                ],
              },
              Object {
                "name": "gcp-video-text-detection",
                "predictions": Array [
                  Object {
                    "count": 2,
                    "label": "Text 1",
                  },
                  Object {
                    "count": 4,
                    "label": "Text 2",
                  },
                  Object {
                    "count": 6,
                    "label": "Text 3",
                  },
                  Object {
                    "count": 8,
                    "label": "Text 4",
                  },
                ],
              },
            ]
          }
          dispatch={[Function]}
          settings={Object {}}
        />
      </div>
    </div>
  </div>
</div>
`;
